# ymir

./: .gitignore  .ignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  NOTEPAD_WINDOWCONTROLS_FIX.md  README.md  bifrost.db  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  ymir.db
.cargo/: config.toml
.github/workflows/: test.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: agent-terminal-pool-strategy.md  websocket-core-refactor.md  websocket-schema-analysis.md  ymir-orchestrator.md
.sisyphus/evidence/: F1-test-suite.txt  F2-schema-drift.txt  F3-manual-qa.txt  component-analysis-layout-tabbar.md  fix-fixture-validator-errors.txt  fix-protocol-test-import.txt  task-1-wire-contract-negative.txt  task-1-wire-contract.txt  task-10-adapter-spike.md  task-11-external-store-runtime-negative.txt  task-11-external-store-runtime.txt  task-11-worktree-list.txt  task-12-agent-spawn.txt  task-12-event-cards-negative.txt  task-12-event-cards.txt  task-13-agent-send.txt  task-13-worktree-integration-negative.txt  task-13-worktree-integration.txt  task-14-agent-cancel.txt  task-14-cleanup-negative.txt  task-14-cleanup.txt  task-15-agent-status-update.txt  task-15-full-regression.txt  task-15-rust-tests.txt  task-15-targeted-regression.txt  task-15-web-tests.txt  task-16-agent-output.txt  task-17-agent-prompt.txt  task-18-terminal-input.txt  task-19-terminal-resize.txt  task-2-accumulator-contract-negative.txt  task-2-accumulator-contract.txt  task-20-acp-handshake.txt  task-20-acp-status.txt  task-20-summary.md  task-20-terminal-create.txt  task-20-verification.md  task-21-terminal-kill.txt  task-22-dots.txt  task-22-status.txt  (+45 more)
.sisyphus/plans/: agent-tab-acp-sdk-migration.md  baseui-shadcn-migration.md  codebase-audit.md  custom-titlebar.md  folder-browser-dialog.md  ghostty-web-migration.md  websocket-core-refactor.md  websocket-crosslang-testing.md  workspace-settings.md  ymir-orchestrator.md  ymir-tauri-mvp.md
.ymir/: workspace-settings.yaml
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
apps/tauri/src-tauri/tests/: build.rs
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/ws-server/: Cargo.toml
crates/ws-server/bindings/: Ack.ts  AcpAck.ts  AcpChunkContent.ts  AcpContextUpdate.ts  AcpContextUpdateType.ts  AcpError.ts  AcpErrorCode.ts  AcpPromptCompleteReason.ts  AcpResumeMarker.ts  AcpResumeRequest.ts  AcpSessionInit.ts  AcpSessionStatusEvent.ts  AcpToolUseStatus.ts  AgentCancel.ts  AgentOutput.ts  AgentPrompt.ts  AgentRemoved.ts  AgentSessionData.ts  AgentStatus.ts  AgentStatusUpdate.ts  CreatePR.ts  Error.ts  FileRead.ts  FileWrite.ts  GetState.ts  GitCommit.ts  GitDiffResult.ts  GitStatusResult.ts  Notification.ts  Ping.ts  Pong.ts  SettingData.ts  TerminalCreated.ts  TerminalInput.ts  TerminalOutput.ts  WorkspaceCreated.ts  WorkspaceData.ts  WorkspaceDeleted.ts  WorkspaceRename.ts  WorkspaceUpdate.ts  (+3 more)
crates/ws-server/src/: hub.rs  lib.rs  logging.rs  main.rs  protocol.rs  router.rs  state.rs  test_fixtures.rs
crates/ws-server/src/agent/: acp.rs  acp.rs.bak  adapter.rs  handler.rs  mod.rs
crates/ws-server/src/db/: mod.rs
crates/ws-server/src/git/: mod.rs
crates/ws-server/src/protocol/: acp.rs  agent.rs  common.rs  file.rs  git.rs  mod.rs  settings.rs  terminal.rs  tests.rs  workspace.rs  worktree.rs
crates/ws-server/src/pty/: handler.rs  mod.rs  output.rs
crates/ws-server/src/watcher/: mod.rs
crates/ws-server/src/workspace/: mod.rs
crates/ws-server/src/worktree/: mod.rs
docs/: database-schema.md  development-setup.md  migration-guide.md  websocket-protocol.md  window-close-testing.md
docs/plans/: 2025-03-21-startup-performance-fixes.md
playwright-report/: index.html
playwright/tests/: smoke.spec.ts  window-controls.spec.ts
scripts/: start-tauri.sh  tauri-dev.sh
src/: App.css  App.tsx  Layout.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: attach_pty_channel.toml  checkout_branch.toml  close_pane.toml  commit_changes.toml  create_branch.toml  create_pane_in_workspace.toml  delete_branch.toml  discard_file_changes.toml  focus_pane.toml  get_app_cwd.toml  get_branches.toml  get_pane_cwd.toml  get_platform_info.toml  set_environment_context.toml  stage_file.toml  unstage_file.toml
src-tauri/src/: commands.rs  git.rs  lib.rs  logging.rs  main.rs  platform.rs  state.rs
src/__tests__/: platform-detection.test.ts
src/cli/: commands.test.ts  commands.ts
src/components/: Browser.css  Browser.tsx  ErrorBoundary.tsx  GitPanel.css  GitPanel.tsx  Layout.tsx  NotificationPanel.tsx  NotificationsPanel.css  NotificationsPanel.tsx  Pane.tsx  ProjectPanel.css  ProjectPanel.tsx  ResizableSidebar.tsx  Sidebar.tsx  (+14 more)
ymir-core/: Cargo.toml
ymir-core/migrations/: 001_initial_schema.sql  002_workspace_settings.sql
ymir-core/src/: lib.rs  protocol.rs  types.rs
ymir-core/src/db/: client.rs  migrations.rs  mod.rs
ymir-core/src/git/: mod.rs  service.rs
ymir-core/src/handlers/: auth.rs  git.rs  mod.rs  pane.rs  pty.rs  tab.rs  workspace.rs  workspace_settings.rs
ymir-core/src/pty/: manager.rs  mod.rs
ymir-core/src/scrollback/: mod.rs  service.rs
ymir-core/src/server/: mod.rs  protocol.rs  websocket.rs
ymir-core/src/settings/: mod.rs  yaml.rs
ymir-server/: Cargo.toml
ymir-server/src/: browser.rs  cli.rs  lib.rs  main.rs
ymir-server/tests/: cli_test.rs
ymir-tauri/: Cargo.toml  build.rs  tauri.conf.json
ymir-tauri/capabilities/: default.json
ymir-tauri/permissions/autogenerated/: discover_git_repos.toml  is_pty_alive.toml  kill_all_sessions.toml
ymir-tauri/src/: app.rs  commands.rs  lib.rs  main.rs  platform.rs
(+221 files in other folders)
