[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/ws-server",
    # "apps/tauri/src-tauri",  # build after `npm run build` in apps/web
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymir/ymir"
description = "ymir — agent composer with workspaces"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
