[package]
name = "ymir"
version = "0.1.0"
description = "A Tauri + React terminal application"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "ymir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pty-process = "0.4"
portable-pty = "0.8"
dashmap = "5"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
