[package]
name = "ymir-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
name = "ymir_server"
path = "src/lib.rs"

[[bin]]
name = "ymir-server"
path = "src/main.rs"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
webbrowser = "1.0"

# Local dependencies
ymir-core = { path = "../ymir-core" }
