[package]
name = "ymir-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
name = "ymir_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Tauri dependencies
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
webbrowser = "1.0"

# Local dependencies
ymir-core = { path = "../ymir-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
