[package]
name = "ymir-ws-server"
version.workspace = true
edition.workspace = true
description = "ymir WebSocket server — core communication framework"

[[bin]]
name = "ymir-ws-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
