[package]
name = "ymir-ws-server"
version.workspace = true
edition.workspace = true
description = "ymir WebSocket server — core communication framework"

[[bin]]
name = "ymir-ws-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-appender = "0.2"
anyhow.workspace = true
axum.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
futures-util.workspace = true
libsql = "0.5.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1.1"
portable-pty = "0.8"
nix = { version = "0.27", features = ["process", "signal"] }
libc = "0.2"
git2 = "0.18"
notify = "6.1"
thiserror.workspace = true
ts-rs = { version = "10.0", features = ["serde-compat"] }
agent-client-protocol = "0.10"
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"

[features]
export-types = []

[dev-dependencies]
tempfile = "3.8"
