[package]
name = "ymir-app"
version.workspace = true
edition.workspace = true
description = "ymir desktop application (Tauri)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
